Day 2 - Message scoring, persistent storage, message count score, and more! - Moved member scoring logic outside of member class into its own file - Message scoring, which factors in mentions, links, and invites. More factors to come - Store domain details and member message counts, each on a per server basis - Add risk classifications, to give a bit of context to the raw score

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Brayzure/kin#readme",
   "dependencies": {
-    "eris": "^0.10.0"
+    "eris": "^0.10.0",
+    "pg": "^7.11.0"
   }
 }
